# hh-suite

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES  CHANGES_planned  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README  README.md  azure-pipelines.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: userguide.yml
cmake/: CheckSSEFeatures.cmake  ResourceCompiler.cmake
data/: CMakeLists.txt  do_not_delete  do_not_delete.phr  do_not_delete.pin  do_not_delete.psq  query.a3m  query.hhm  query.hhr  query.seq  test.sh
dist-scripts/: Align.pm  HHPaths.pm  addss.pl  create_cs_db.pl  create_db.pl  create_profile_from_hhm.pl  create_profile_from_hmmer.pl  hhblitsdb.pl  hhmakemodel.pl  multithread.pl  reformat.pl
doc/: CMakeLists.txt  hhsuite-userguide.aux  hhsuite-userguide.bib  hhsuite-userguide.tex  hhsuite-userguide.toc
lib/ffindex/: .gitignore  CMakeLists.txt  README.md
lib/ffindex/src/: CMakeLists.txt  ffindex.c  ffindex.h  ffindex_apply_mpi.c  ffindex_build.c  ffindex_from_fasta.c  ffindex_from_fasta_with_split.c  ffindex_get.c  ffindex_modify.c  ffindex_order.c  ffindex_reduce.c  ffindex_unpack.c  ffutil.c  ffutil.h
lib/ffindex/src/ext/: CMakeLists.txt  fmemopen.c  fmemopen.h
lib/ffindex/src/mpq/: CMakeLists.txt  mpq.c  mpq.h
lib/simd/: simd.h
lib/simde/simde/: simde-arch.h
rpm/: hhsuite.spec
scripts/: Align.pm  CMakeLists.txt  HHPaths.pm  a3m.py  addpsipred.pl  addss.pl  alignhits.pl  build_a3m.pl  build_darwin_universal.sh  buildali.pl  builddb.pl  buildinter.pl  calc_correlation.pl  cdd.pl  checkA3M.pl  check_a3m.py  cif2fasta.py  create_cs_db.pl  create_db.pl  create_hhblitsdb.pl  create_profile_from_hhm.pl  create_profile_from_hmmer.pl  createdb.sh  dssp.pl  fasta_cutter.py  ffindex.py  get_a3m_size.py  hh_reader.py  hhblitsdb.pl  hhmakemodel.pl  hhmakemodel.py  hhsuitedb.pl  hhsuitedb.py  hhviz.pl  is_huge_a3m.py  makepdbfile.pl  mergeali.pl  multithread.pl  pdb2fasta.pl  pdbfilter.pl  (+7 more)
scripts/hhpred/: .gitignore  README  hhpred.pl
scripts/hhpred/dependencies/: HHPaths.pm  Makefile  hhmakemodel.pl  patch_modeller_h_missing_files.patch  patch_probcons_main_cc_missing_cstring.patch
scripts/hhpred/dependencies/modeller_cuser/: buildall.sh  cuser_form.c  cuser_form.h  cuser_form.i  cuser_form52.c  cuser_form52.i  cuser_form52_wrap.c  cuser_form54.c  cuser_form54.i  cuser_form54_wrap.c  cuser_form56.c  cuser_form56.i  cuser_form56_wrap.c  cuser_form_wrap.c
scripts/hhpred/example/: test.a3m
scripts/hhpred/lib/: FastaFile.pm  FixOccupancy.pm  PDBResolution.pm  PdbFile.pm  PirFile.pm  QualityAssessModel.pm  Template.pm  TemplateList.pm  TemplateListStruct.pm  TemplateStruct.pm  aminoAcid.pm  checkTemplates.pm  config.pm  distanceTree.pm  filterAlignments.pm  modeller.pm  multiTemplateMDN.pm  predTMscore.pm  selectTemplatesHeuristic.pm  simpleTree.pm  singleRankingNet.pm  utilities.pm
scripts/hhpred/lib/Class/: Singleton.pm
scripts/hhpred/share/distancethreshold/: comp_simple_distancethreshold_5.5_alpha_0.3_beta_1.5.csv  contact_simple_distancethreshold_11.6.csv  css_simple_distancethreshold_5.5_alpha_0.3_beta_1.5.csv
src/: .hhdefaults  CHANGES_newest  CMakeLists.txt  HHDatabase.cpp  HHblits-guide.tex  HHblits.cpp  HHblits.h  HHsearch-guide.aux  HHsearch-guide.tex  HHsearch-guide.toc  HHsearchDatabase.cpp  HHsearchDatabase.h  LICENSE  Makefile  Makefile.osx  TransitiveScoring2.C  TransitiveScoring3.C  a3m_compress.cpp  a3m_compress.h  a3m_database_extract.cpp  a3m_database_extractor.cpp  a3m_database_filter.cpp  a3m_database_reduce.cpp  a3m_database_reducer.cpp  a3m_extract.cpp  a3m_extractor.cpp  a3m_reduce.cpp  a3m_reducer.cpp  a3m_reducer.h  amino_acid.cpp  amino_acid.h  buffer.C  calc.C  cluster.cpp  cluster.h  coemit.C  cs_counts.cpp  cs_counts.h  dummy_matrix.h  ffindex.c  (+143 more)
src/cs/: CMakeLists.txt  aa.cc  aa.h  abstract_state_matrix-inl.h  abstract_state_matrix.h  alignment-inl.h  alignment.h  application.cc  application.h  as.cc  as.h  assert_helpers.cc  assert_helpers.h  bitset.h  blast_hits.h  blosum_matrix.cc  blosum_matrix.h  co_emission.h  context_library-inl.h  context_library.h  context_profile-inl.h  context_profile.h  count_profile-inl.h  count_profile.h  crf-inl.h  crf.h  crf_pseudocounts-inl.h  crf_pseudocounts.h  crf_state-inl.h  crf_state.h  cs.h  cs219toint_app.cc  cstranslate_app.cc  cstranslate_app.h  cstranslate_mpi_app.cc  cstranslate_mpi_app.h  dna.h  emission.h  exception.h  getopt_pp.cc  (+27 more)
test/: CMakeLists.txt
